[package]
name = "material_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
image = "0.25.6"
pdf2image = "0.1.3"
pyo3 = {version = "0.25.1", features = ["auto-initialize"]}
reqwest = {version = "0.12.22", features = ["json", "blocking"]}
salvo = { version = "0.80.0" , features = ["cors"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
